maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:31: error: 'while' expected but '}' found.
    } while (angle!=0 && !isOverBaggle())
    ^PledgeMaze:31: error: ';' expected but 'while' found.
    } while (angle!=0 && !isOverBaggle())
      ^PledgeMaze:35: error: Unmatched closing brace '}' ignored here
}
^